src/table-view.css
/* ... */
/*TABLE HEADERS*/
table th {
    text-align: center;
    content-align: center;
    font-weight: bold;
    font-size: 28px;
    text-transform: lowercase;
    white-space: nowrap;

    -webkit-user-select: none; /* Chrome/Safari */        
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+ */
}

table th:hover {
    cursor: default;
}

table th.student_name {
    width: 30%;
    color: #60BADF;
    border-top-style: hidden;
    border-left-style: hidden;
    border-right-style: hidden;
    border-bottom: 1px solid #BCB8AD;
    padding-bottom: 0px;
    /*visibility:hidden;*/
}

table td.candrop.pair_with, table td.candrop.dont_pair_with {
    background: none;
    opacity: 0.999;
    z-index: 1;
}

table td.candrop.pair_with.highlight {
    box-shadow: 0 0 10px rgb(106, 213, 162);
}
table td.candrop.dont_pair_with.highlight {
    box-shadow: 0 0 10px rgb(243, 147, 84);
}

table th.pair_with {
    width: 25%;
    color: #6AD5A2;
    border-top-style: hidden;
    border-left-style: hidden;
    border-right-style: hidden;
    border-bottom: 1px solid #BCB8AD;
    padding-bottom: 0px;
    
}

.hideprefs table .pair_with {
    display : none;
}


table th.dont_pair_with  {
    width: 25%;
    color: #F39354;
    font-weight: bold;
    border-top-style: hidden;
    border-left-style: hidden;
    border-right-style: hidden;
    border-bottom: 1px solid #BCB8AD;
    /*visibility:hidden;*/
}
.hideprefs table .dont_pair_with {
    display : none;
}

table th.remove {
    width: 12%;
    border-top-style: hidden;
    border-left-style: hidden;
    border-right-style: hidden;
    border-bottom: 1px solid #BCB8AD;
}


/*TABLE ROWS */
table tr {
    height: 8ex;
}

.mediumclassroom table tr {
    height: auto;
}

/*TABLE CELLS*/
table td {
    width: 38%;
    vertical-align: top;
    border: 1px solid #BCB8AD;
    padding: 2px 2px;
    background: #F9F7F1;
    color: #00838F;
}

table td.student_name {
    width: 30%;
    text-align: center;
    vertical-align: middle;
}

table td.remove {
    width: 12%;
    font-size:18px;
    vertical-align: middle;
    text-align: center;
/*    background: #F39354;
    background: #DBD8D3;
    background: #f4efe1;
    background: #F47D31;
    background: #DDDDDA;
    background: #F39354;
    background: #D0CEC8;
    background: #DBD9D3;
    background: #f2eee3;*/
    background: #EAE6DB;
    color: #FED587;
    color: white;
    color: #3F3C36;
}

table td.remove:hover {
    color: #F39354;
    background: #FED587;
    cursor: pointer;
}

table .remove:before {
    font-family: FontAwesome;
    font-size: 18px;
    content: '\f014';
}

table th.remove {
    color: gainsboro;
    font-weight: normal;
    padding: 7px 8px 0 8px;
}

/*TILES */
table td p .fa-grip:before {
    font-family: FontAwesome;
    font-size: 13px;
    /*content: "\f142 \202F \f142 \202F \f142";*/
    color: white;
    padding-right: 8px;
    cursor: -webkit-grab;
    cursor: grab;
}

table td p {
    display: inline-block;
    border: 2px solid;
    border-radius: 5px;
    padding: 3px 7px;
    margin: 1px 3px;
    color: white;
    white-space: nowrap;
    cursor: -webkit-grab;
    cursor: grab;
}

table td p.ui-draggable-dragging {
    box-shadow: 0 3px 11px #939085;
    cursor: -webkit-grabbing;
    cursor: grabbing;
}

.directentry {
    display: inline-block;
    padding: 0px;
    margin: 2px 2px 5px;
    vertical-align: bottom;
}

/* delete element in tiles */
table td p span:hover {
    color: red;
    cursor: pointer;
}

.tile {
    box-shadow: 0 0 3px gray;
}

.tile_name {
    background: #60BADF;
}

.tile_name:nth-of-type(1) {
    width: 90%;
    max-width: 300px;
    line-height: 30px;
    background: #60BADF;
    height: 40px;
    font-size: 20px;
    vertical-align: middle;
    text-align: center;
    box-sizing: border-box;
}

.largeclassroom .tile_name:nth-of-type(1),
.largeclassroom table td p {
    height: 25px;
    font-size: medium;
    line-height: 1;
    box-sizing: border-box;
    vertical-align: middle;
}
.largeclassroom table td p span {
    font-size: 90%;
}
.largeclassroom table td {
    padding: 0 2px;
}

.tile_name:hover, .tile_name:nth-of-type(2) {
    box-shadow: 0 3px 11px #939085;
}

.tile_prefer {
    background: #6AD5A2;
}

.tile_avoid {
    background: #FDD487;
    background: #F39354;
}

.tile_prefer_pinned {
    /*todo*/
}

.tile_prefer_banned {
    /*todo*/
}

.tile_avoid_pinned {
    /*todo*/
}

.tile_avoid_banned {
    /*todo*/
}

table td p span:after {
    font-family: FontAwesome;
    content: '\00a0\00a0\f00d';
}

/*actual input box */
#add_student_row {
    text-align: center;
    content-align: center;
    width: 90%;
    border-right-style: hidden;
    border-left-style: hidden;
    border-bottom-style: hidden;
    border-radius: 10px;
}

#add_student_box {
    display:inline-block;
    /* text-align: center; */
    /* vertical-align: middle; */
    padding: 20px;
    border-radius: 10px;
    width: 100%;
    font: 18px Raleway;
    height: 5em;
    resize: none;
}

.emptyclassroom #add_student_box {
    height: 22em;
}

/* Make the textarea larger when it's the only thing. */
table th:nth-of-type(1) th textarea {
    height: 40ex;
}
/* Then only slightly shrink it for the first four students. */
table th:nth-of-type(2) th textarea {
    height: 16ex;
}
table th:nth-of-type(3) th textarea {
    height: 12ex;
}
table th:nth-of-type(4) th textarea {
    height: 8ex;
}

/*CLASS NAME INPUT BOX*/ 
#classname_row {
    text-align: center;
    align-content: center;
    padding-bottom: 5%;
    padding-top: 5%;
    border-top-style:hidden;
    border-left-style:hidden;
    border-right-style:hidden;
}
/* ... */

